[package]
name = "survex-helper"
version = "0.0.1"
edition = "2021"


[features]
default = ["mnemo"]
debug = []
mnemo = []

[dependencies]
clap = { version = "^4.5.29",features = ["derive"] }
serde ={ version = "*"}
serde_yaml ={ version = "*"}

[dependencies.libsurvex]
path = "../libsurvex"
version = "*"
features = ["mnemo", "debug"]

[dependencies.libmnemo]
path = "../libmnemo"
version = "*"
# git = "https://github.com/Snoozyman/libmnemo"
features = ["debug"]
